# admin

./: README.md
mcp/: chrome-devtools.json
skills/: EXCLUSIONS.md  README.md
skills/brownfield/: SKILL.md
skills/browser/: PROCEDURE.md  SKILL.md  github-auth-setup.md  github-terminal.md
skills/browser-github/: SKILL.md
skills/browserchat-ask/: SKILL.md
skills/browsernotes/: SKILL.md
skills/cleanup/: SKILL.md
skills/cleanz/: SKILL.md
skills/debug/: SKILL.md
skills/design-thinking/: SKILL.md
skills/execute/: SKILL.md
skills/fix-type-ignores/: SKILL.md
skills/gmailz/: SKILL.md
skills/greenfield/: SKILL.md
skills/handoff/: SKILL.md
skills/infotree/: SKILL.md
skills/llm-wiki/: SKILL.md
skills/mermaid-create/: SKILL.md
skills/mermaid-master-architect/: SKILL.md
skills/meta/: SKILL.md
skills/notebooklm/: SKILL.md
skills/plan/: SKILL.md
skills/present-options/: SKILL.md
skills/review/: SKILL.md
skills/skill-content-format/: SKILL.md
skills/skills-maintenance/: SKILL.md
skills/sql-admin/: SKILL.md
skills/test-driven-development/: SKILL.md
skills/todo-system/: SKILL.md
skills/verify/: SKILL.md
skills/workflow/: SKILL.md
standards/: ANDROID.md  ESP-IDF.md  EXTENSIONS.md  FASTAPI.md  FILE_STRUCTURE.md  PYTHON.md  README_STYLE.md  TESTING.md  TKINTER_STYLE.md  pyproject.toml
